--- a/custom_components/openai_music/translations/en.json
+++ b/custom_components/openai_music/translations/en.json
@@ -23,7 +23,10 @@
                 "img_temperature": "Image Temperature (Range 0-2, default: 0.2)",
                 "max_tokens": "Max Tokens (Range 100-1000, default: 500)",
                 "chat_model": "Chat Model (Default: gpt-3.5-turbo)",
-                "img_resolution": "Image Resolution (Default: 1024x1024)",
+                "img_resolution": "Image Resolution (Default: 1024x1024) Dall-E-3 required for other",
+                "img_model": "Image Model (Default: Dall-E-2)",
+                "img_quality": "Image Quality (Dall-E-3 only) (Default: standard)",
+                "img_style": "Image Style (Dall-E-3 only) (Default: vivid)",
                 "user_tag": "User Tag used for OpenAI Requests",
                 "img_count": "Number of simultaneous images to create $$$"
               },
